# ui

./: CMakeLists.txt
include/: color.h  painter.h  property.h  size.h  widget.h  window.h
include/layouts/: layout.h
include/widgets/: common.h
src/: painter.cpp  widget.cpp  window.cpp
src/layouts/: layout.cpp
src/widgets/: rectangle.cpp
test/: main.cpp
